<resources>
    <string name="app_name">PassMan</string>
    <string name="hint_curr_pass">Current Password</string>
    <string name="hint_password">New Password</string>
    <string name="hint_confirm_password">Confirm New Password</string>
    <string name="txt_lgn">LOGIN</string>
    <string name="txt_changePass">Change Password ? </string>
    <string name="empty_field">Empty Field !</string>
    <string name="incorrect_value">Incorrect Value !</string>
    <string name="success">"Successfully Done"</string>
    <string name="hint_title">Title</string>
    <string name="hint_email">Email</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>


