<?xml version="1.0" encoding="utf-8"?>
    <ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary2"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="80dp"
    android:paddingRight="30dp"
    android:background="@color/colorPrimary2"
    tools:context=".activities.ActivityChangePassword">

    <ImageView
        android:src="@drawable/ic_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edCurrentPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_curr_pass"
            android:inputType="textPassword"
            android:textColor="@color/colorText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/colorText" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/btnChangePass"
        android:text="@string/txt_changePass"
        android:backgroundTint="@color/colorPrimaryDark2"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

</LinearLayout>
</ScrollView>